--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
