--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -11,7 +11,7 @@
       "id": 2,
       "name": "Kinggs and godds",
       "link": "https://kinggsandgodds.com",
-      "desc": "- online shopping website",
+      "desc": "- online store for Dremo's latest merch",
       "image": "../../uploads/projects/kinggsandgodds.png"
     },
 
@@ -40,7 +40,7 @@
       "id": 6,
       "name": "Bodmantech",
       "link": "https://bodmantech.com",
-      "desc": "- online shopping website",
+      "desc": "- online store for buying mobile phones",
       "image": "../../uploads/projects/bodmantech.png"
     }
   ]
