--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "afaraseun_portfolio",
+  "name": "afaraseun",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
+    "vue-meta": "^2.4.0",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0"
   },
