--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -1,47 +1,55 @@
 {
-  "projects": [
-    {
-      "id": 1,
-      "name": "Unzep",
-      "link": "https://unzep.com",
-      "desc": "- reviews collection website",
-      "image": "../../uploads/projects/unzep.png"
-    },
-    {
-      "id": 2,
-      "name": "Kinggs and godds",
-      "link": "https://kinggsandgodds.com",
-      "desc": "- online store for Dremo's latest merch",
-      "image": "../../uploads/projects/kinggsandgodds.png"
-    },
+   "last_id": "7",
+   "projects": [
+      {
+         "id": 1,
+         "name": "Unzep",
+         "link": "https://unzep.com",
+         "desc": "- reviews collection website",
+         "image": "../../uploads/projects/unzep.png"
+      },
+      {
+         "id": 7,
+         "name": "AskDove",
+         "link": "https://askdove.com",
+         "desc": "- online Q&A forum",
+         "image": "../../uploads/projects/askdove.png"
+      },
+      {
+         "id": 2,
+         "name": "Kinggs and godds",
+         "link": "https://kinggsandgodds.com",
+         "desc": "- online store for Dremo's latest merch",
+         "image": "../../uploads/projects/kinggsandgodds.png"
+      },
 
-    {
-      "id": 3,
-      "name": "Dangote",
-      "link": "https://dangote.com",
-      "desc": "- dangote group portfolio website",
-      "image": "../../uploads/projects/dangote.png"
-    },
-    {
-      "id": 4,
-      "name": "Vigowork",
-      "link": "https://vigowork.com",
-      "desc": "- online freelance marketplace",
-      "image": "../../uploads/projects/vigowork.png"
-    },
-    {
-      "id": 5,
-      "name": "Triangle",
-      "link": "https://triangle.ng",
-      "desc": "- systems integration company",
-      "image": "../../uploads/projects/triangle.png"
-    },
-    {
-      "id": 6,
-      "name": "Bodmantech",
-      "link": "https://bodmantech.com",
-      "desc": "- online store for buying mobile phones",
-      "image": "../../uploads/projects/bodmantech.png"
-    }
-  ]
+      {
+         "id": 3,
+         "name": "Dangote",
+         "link": "https://dangote.com",
+         "desc": "- dangote group portfolio website",
+         "image": "../../uploads/projects/dangote.png"
+      },
+      {
+         "id": 4,
+         "name": "Vigowork",
+         "link": "https://vigowork.com",
+         "desc": "- online freelance marketplace",
+         "image": "../../uploads/projects/vigowork.png"
+      },
+      {
+         "id": 5,
+         "name": "Triangle",
+         "link": "https://triangle.ng",
+         "desc": "- systems integration company",
+         "image": "../../uploads/projects/triangle.png"
+      },
+      {
+         "id": 6,
+         "name": "Bodmantech",
+         "link": "https://bodmantech.com",
+         "desc": "- online store for buying mobile phones",
+         "image": "../../uploads/projects/bodmantech.png"
+      }
+   ]
 }
